--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,7 @@ authors = ["Miles Cochran-Branson <mcochranbranson@gmail.com>"]
 version = "0.1.0"
 
 [deps]
+DiffEqFlux = "aae7a2af-3d4f-5e19-a356-7da93b79d9d0"
 DomainSets = "5b8099bc-c8ec-5219-889f-1d9e522a28bf"
 Flux = "587475ba-b771-5e3f-ad9e-33799f191a9c"
 GalacticOptim = "a75be94c-b780-496d-a8a9-0878b188d577"
