--- a/Project.toml
+++ b/Project.toml
@@ -20,3 +20,4 @@ Roots = "f2b01f46-fcfa-551c-844a-d8ac1e96c665"
 SciMLSensitivity = "1ed8b502-d754-442c-8d5d-10ac956f44a1"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
+Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
